Bug 1640410 - fix stacking of narrate popup and narrated text in reader mode's narrate feature, r=emalysz
The z-index: initial for the keep-open class was redundant (see https://bugzilla.mozilla.org/show_bug.cgi?id=1640410#c4 ).
However, one more change was necessary to fix this bug: the .narrating class
gets z-index: 1 in narrate.css, in order to position the word highlights
below it. But the toolbar-container also gets z-index: 1, and because it
comes before the reader mode content in the DOM, its content will never
appear above the reader mode content unless it gets a higher z-index. So
we give it a z-index of 2.

Differential Revision: https://phabricator.services.mozilla.com/D76851

UltraBlame original commit: 4ff7fb7b96694b162de6a7f455121b7cee01973d

--- a/toolkit/themes/shared/aboutReader.css
+++ b/toolkit/themes/shared/aboutReader.css
@@ -1381,7 +1381,7 @@ z
 -
 index
 :
-1
+2
 ;
 top
 :
@@ -2316,22 +2316,6 @@ bottom
 width
 :
 0
-;
-}
-.
-keep
--
-open
-.
-dropdown
--
-popup
-{
-z
--
-index
-:
-initial
 ;
 }
 .
